--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express-flash": "^0.0.2",
     "express-handlebars": "^6.0.3",
     "express-session": "^1.17.2",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
     "sequelize": "^6.17.0",
     "session-file-store": "^1.5.0"
